[project]
name = "autctapi"
version = "0.0.2"
authors = [
  { name="AdamISZ", email = "no@example.com" },
]
description = "Autct websocket API client in Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/AdamISZ/autct-api.git"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.test"]

[tool.pytest.ini_options]
testpaths = ["test"]

